# Simple-client-server_CPP

./: CMakeLists.txt  LICENSE  README.md
src/: NTP_Client.cpp  NTP_Client.h  Packets.h  Server.cpp  Server.h  UserConnection.cpp  UserConnection.h  main.cpp
